MSS-169 update translations for culturefeed uitpas en culturefeed ui

--- a/culturefeed_social/translations/culturefeed_social.de.po
+++ b/culturefeed_social/translations/culturefeed_social.de.po
@@ -74,7 +74,7 @@ msgid "Culturefeed social: summary of loggedin users activities"
 msgstr "CultureFeed Social: Übersicht der Nutzeraktionen"
 
 #: culturefeed_social.module:381
-msgid "Actions"
+msgid "User history"
 msgstr "Aktionen"
 
 #: culturefeed_social.module:383
