UIV-1272 label + translation for opening hours on actor detail

--- a/culturefeed_agenda/translations/culturefeed_agenda.nl.po
+++ b/culturefeed_agenda/translations/culturefeed_agenda.nl.po
@@ -299,6 +299,10 @@ msgstr "Alle data"
 msgid "Where"
 msgstr "Waar"
 
+#: theme/culturefeed-actor.tpl.php
+msgid "Opening hours"
+msgstr "Openingsuren"
+
 #: includes/blocks.inc:199
 msgid "Use my current location"
 msgstr "Gebruik mijn huidige locatie"
