UIV-1571 copy + translation for connect application link

--- a/culturefeed_ui/translations/culturefeed_ui.nl.po
+++ b/culturefeed_ui/translations/culturefeed_ui.nl.po
@@ -440,8 +440,8 @@ msgid "Remove connection"
 msgstr "Verwijder koppeling"
 
 #: culturefeed_ui.helpers.inc:213
-msgid "Connect application"
-msgstr "Kanaal koppelen"
+msgid "Connect"
+msgstr "Koppelen"
 
 #: culturefeed_ui.helpers.inc:228
 msgid "Like"
