--- a/culturefeed_calendar/translations/culturefeed_calendar.nl.po
+++ b/culturefeed_calendar/translations/culturefeed_calendar.nl.po
@@ -142,7 +142,7 @@ msgstr ""
 
 #: includes/pages.inc:470
 msgid "Enter a date between "
-msgstr "Kies een datum "
+msgstr "Kies een datum tussen "
 
 #: includes/pages.inc:470
 msgid " and "
